hphp/test/zend/bad/bug61225.php
<?php
echo 0b00+1;
echo "\n";
?>